# DatalandMCP

./: .env.example  .env.librechat  .env_dummy  .gitignore  DEPLOYMENT.md  README.md  claude_config_dummy.json  docker-compose.override.yml  docker-compose.yml  librechat.yaml  pyproject.toml  sonar-project.properties  system_prompt
.github/workflows/: CD.yaml  CD.yml  CI.yml  build-push-datalandmcp.yml
deployment/: deploy-app.sh  deployment.sh  health-check.sh  install-docker.sh  local_deployment.sh  purge-volume.sh
mcp_server/: Dockerfile  README.md  entrypoint.sh  healthcheck.sh  mcp.json  pyproject.toml
mcp_server/src/: dataland_client.py  dataland_mcp.py  mcp_server.py  server.py  server_utils.py
src/datalandmcp/: mcp_server.py  min_example_sfdr_retrieval.py
